Fixed xoverflow problem with header navbar underlines

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,13 +11,20 @@
 	font-style: normal;
 }
 
-html, body, * {
+html, body {
 	margin: 0;
 	padding: 0;
 	background-color: var(--background-color);
 	color: var(--primary-text-color);
 	font-family: "Inter", sans-serif, Arial, Helvetica;
 	overflow-x: hidden;
+}
+* {
+	margin: 0;
+	padding: 0;
+	background-color: var(--background-color);
+	color: var(--primary-text-color);
+	font-family: "Inter", sans-serif, Arial, Helvetica;
 }
 
 /******************* Header ********************/
